syntax = "proto3";

package session;
option go_package = "microservices/authorization/delivery";

message SessionData {
  string Cookies = 1;
}

message Auth {
  string Login = 1;
  string Password = 2;
}

message UserID {
  int32 userID = 1;
}

message SignUpData {
  string Email = 1;
  string Password = 2;
  string Nickname = 3;
}

service SessionChecker {
  rpc GetUserBySession(SessionData) returns(UserID) {}
  rpc DeleteSession(SessionData) returns(UserID) {}
  rpc SignIn(Auth) returns(SessionData) {}
  rpc Signup(SignUpData) returns(SessionData) {}
}